--- a/site/index.html
+++ b/site/index.html
@@ -567,12 +567,24 @@
 
 <h1 id="welcome-to-piracy-link-archive-pla">Welcome to Piracy Link Archive (PLA)</h1>
 <hr />
+<blockquote>
+<p>THIS SITE IS STILL IN VERY EARLY STATE!!</p>
+</blockquote>
 <h2 id="what-is-this">What is this?</h2>
 <p>The Piracy Link Archive is a comprehensive index of download links curated from trusted piracy websites. It's designed to help you find what you're looking for quickly and easily.</p>
 <h2 id="dmca">DMCA</h2>
 <p>Tell the file host to remove the file. If they don't, womp womp.</p>
 <p>fuck u big corporation</p>
 <p>if u try to dmca this site I will find u down and suck ur dick.</p>
+<p><code>&lt;RANT START&gt;</code>
+Big corporations and DRM (Digital Rights Management) are the biggest assholes in the game, and I’m not even gonna sugarcoat it. These greedy fucks couldn’t give less of a shit about <em>u</em>, the paying customer. They’ve made it their mission to treat <em>everyone</em> like a thief, all while screwing over the legit folks who just wanna enjoy the stuff they bought without jumping through a thousand hoops.</p>
+<p>Let’s break this down. U drop cash on a game, movie, or album, and what do u get in return? Some bullshit restrictions wrapped in DRM. Suddenly, it’s not <em>your</em> game anymore. Nah, it’s like u rented it and need permission from the corporate overlords every time u wanna use it. Wanna play that single-player game offline? Fuck u. Got bad internet? Screw u, u can’t even access what u paid for. It’s like these companies are saying, “Thanks for the money, but we still own <em>everything</em>, and u just have the privilege of playing when we say so.”</p>
+<p>What makes it worse is how utterly pointless DRM is. These big-ass corporations invest millions into these systems, all in the name of “stopping piracy.” But guess what? It doesn’t even work. Hackers crack the DRM faster than it takes to boot up your damn console. So who gets punished here? Not the pirates—they’re playing that shit for free, DRM-free. It’s the legit buyers like u and me, the ones who are actually supporting the industry, that get bent over. It’s fucking ridiculous!</p>
+<p>DRM makes <em>everything</em> worse. Remember buying music on iTunes back in the day? U had to deal with Apple’s restrictive DRM bullshit that only let u play your music on their devices. What the fuck is that about? U pay for the song, but they decide where u can play it. And if u wanted to use another player or device? Tough luck—buy it again or spend hours converting it just to listen to something u <em>own</em>. But do u <em>really</em> own it? Nope. They’ve got u by the balls with this digital prison.</p>
+<p>And here’s the kicker: DRM doesn’t just mess with new stuff. It totally screws over older content too. Wanna play that game from 10 years ago? Oh wait, the DRM servers went offline? Well, fuck u, u can’t play it anymore. A game u bought with your hard-earned cash is now completely useless. It’s like these corporations are saying, “Thanks for supporting us, but screw your nostalgia or desire to revisit this game. We’ve moved on, and so should u.”</p>
+<p>They also don’t give a flying fuck about privacy. Some DRM schemes are straight-up spyware. They’re snooping on your system, tracking data, and just invading your space, all under the guise of “stopping piracy.” It’s such bullshit. U paid for the game, and now they’re in your damn business? It’s like buying a couch, and the salesman comes over every week to sit on it and see how u’re using it. Get the fuck outta here with that nonsense.</p>
+<p>At the end of the day, big corporations and DRM are just another way for these greedy assholes to keep control over everything while they laugh at u. They don’t trust u, they don’t respect u, and they sure as hell don’t care about u once they’ve got your money. Fuck DRM, and fuck the companies pushing this garbage on us.</p>
+<p><code>&lt;RANT FINISHED&gt;</code></p>
 <hr />
 <h2 id="how-can-you-contact-us">How can you contact us?</h2>
 <ul>
